# conways_game_of_life

./: .gitmodules  CMakeLists.txt  README.md
sources/: main.cpp
